[package]
name = "blackd-client"
version = "0.0.3"
authors = ["disrupted <hi@salomonpopp.me>"]
edition = "2018"
description = "Blazing fast Python code formatting using Black"
readme = "README.md"
repository = "https://github.com/disrupted/blackd-client"
license = "GPL-3.0"
keywords = ["code-formatter", "cli", "black", "blackd", "python"]
categories = ["command-line-utilities"]

[dependencies]
minreq = "2.3.1" 
clap = "3.0.0-beta.2"
custom_error = "1.9.2"

[dev-dependencies]
httpmock = "0.5.8"
pretty_assertions = "0.7.2"
